[package]
name = "rescue_wasm"
version = "0.1.0"
authors = ["lispczz <mycinbrin@gmail.com>"]
edition = "2018"

[dependencies]
franklin_crypto = { package = "franklin-crypto", git = "https://github.com/matter-labs/franklin-crypto.git", branch="beta"}
wasm-bindgen = "0.2.71"
console_error_panic_hook = "0.1.6"
web-sys = { version = "0.3.48", features = [ "console" ]}
js-sys = "0.3.48"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = true
